// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeerForm should render 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="PeerForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc my-8"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="CustomPeers__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="CustomPeers__network-input"
            id="CustomPeers__network-label"
          />
          <div
            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
            >
              <div
                class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
                data-testid="SelectNetworkInput__network"
              />
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="CustomPeers__network-menu"
              aria-labelledby="CustomPeers__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              id="CustomPeers__network-input"
              placeholder="Enter a cryptoasset name"
              value=""
            />
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="font-bold text-sm text-theme-secondary-400 dark:text-theme-secondary-700 mb-3"
          >
            PUBLIC NETWORKS
          </div>
          <ul
            aria-labelledby="CustomPeers__network-label"
            class="grid grid-cols-6 gap-3"
            id="CustomPeers__network-menu"
            role="listbox"
          >
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="ARK"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Compendia"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-ARK-compendia.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    bind.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Bitcoin"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-BTC-btc.livenet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Ethereum"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-ETH-eth.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Lisk"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-LSK-lsk.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="font-bold text-sm text-theme-secondary-400 dark:text-theme-secondary-700 mb-3"
          >
            DEVELOPMENT NETWORKS
          </div>
          <ul
            aria-labelledby="CustomPeers__network-label"
            class="grid grid-cols-6 gap-3"
            id="CustomPeers__network-menu"
            role="listbox"
          >
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="ARK Devnet"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Lisk Testnet"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                data-testid="NetworkIcon-LSK-lsk.testnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="PeerForm__name-input"
          name="name"
          value=""
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="host"
      >
        Peer IP
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="PeerForm__host-input"
          name="host"
          value=""
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="type"
      >
        Type
        <span
          class="ml-1 text-theme-secondary-text"
          data-testid="FormLabel__optional"
        >
          (optional)
        </span>
      </label>
      <label
        class="flex items-center space-x-2"
        for="isMultiSignature"
      >
        <input
          class="Checkbox-sc-17gwqiq-0 iGvDni"
          color="success"
          data-testid="PeerForm__multisignature-toggle"
          name="isMultiSignature"
          type="checkbox"
        />
        <span
          class="text-sm font-semibold text-theme-secondary-text"
        >
          Multisignature
        </span>
      </label>
    </fieldset>
    <div
      class="flex justify-end mt-4"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 kwcZQn"
        data-testid="PeerForm__submit-button"
        disabled=""
        type="submit"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Peer
        </div>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`PeerForm should render the peer on the form 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="PeerForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc my-8"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="network"
      >
        Cryptoasset
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="CustomPeers__network-menu"
          data-testid="SelectNetwork"
          role="combobox"
        >
          <label
            for="CustomPeers__network-input"
            id="CustomPeers__network-label"
          />
          <div
            class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            data-testid="SelectNetworkInput"
          >
            <div
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle-uw7h4j-0 blBpcG border-theme-primary-100 text-theme-primary-400"
                data-testid="SelectNetworkInput__network"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <span
              class="InputGroup__InputAddonStyle-sc-1obbdqe-0 epSJiV py-3 font-normal border border-transparent opacity-50 pointer-events-none pl-15"
              data-testid="SelectNetworkInput__typeahead"
            >
              ARK Devnet
            </span>
            <input
              aria-autocomplete="list"
              aria-controls="CustomPeers__network-menu"
              aria-labelledby="CustomPeers__network-label"
              autocomplete="off"
              class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
              data-testid="SelectNetworkInput__input"
              id="CustomPeers__network-input"
              placeholder="Enter a cryptoasset name"
              value="ARK Devnet"
            />
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="font-bold text-sm text-theme-secondary-400 dark:text-theme-secondary-700 mb-3"
          >
            PUBLIC NETWORKS
          </div>
          <ul
            aria-labelledby="CustomPeers__network-label"
            class="grid grid-cols-6 gap-3"
            id="CustomPeers__network-menu"
            role="listbox"
          >
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="ARK"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-ARK-ark.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Compendia"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-ARK-compendia.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    bind.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Bitcoin"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-BTC-btc.livenet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Ethereum"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-ETH-eth.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Lisk"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
                data-testid="NetworkIcon-LSK-lsk.mainnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="font-bold text-sm text-theme-secondary-400 dark:text-theme-secondary-700 mb-3"
          >
            DEVELOPMENT NETWORKS
          </div>
          <ul
            aria-labelledby="CustomPeers__network-label"
            class="grid grid-cols-6 gap-3"
            id="CustomPeers__network-menu"
            role="listbox"
          >
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="ARK Devnet"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-success-500 dark:border-theme-success-600 bg-theme-success-100 dark:bg-theme-success-900 text-theme-secondary-600 dark:text-theme-secondary-200"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </li>
            <li
              class="inline-block cursor-pointer h-21"
              data-testid="SelectNetwork__NetworkIcon--container"
            >
              <div
                aria-label="Lisk Testnet"
                class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
                data-testid="NetworkIcon-LSK-lsk.testnet"
              >
                <div
                  class="sc-bdfBwQ caqoGN"
                  data-testid="NetworkIcon__icon"
                  height="30"
                  width="30"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="PeerForm__name-input"
          name="name"
          value="ROBank"
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="host"
      >
        Peer IP
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
      >
        <input
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
          data-testid="PeerForm__host-input"
          name="host"
          value="http://167.114.29.48:4003/api"
        />
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
        data-testid="FormLabel"
        for="type"
      >
        Type
        <span
          class="ml-1 text-theme-secondary-text"
          data-testid="FormLabel__optional"
        >
          (optional)
        </span>
      </label>
      <label
        class="flex items-center space-x-2"
        for="isMultiSignature"
      >
        <input
          class="Checkbox-sc-17gwqiq-0 iGvDni"
          color="success"
          data-testid="PeerForm__multisignature-toggle"
          name="isMultiSignature"
          type="checkbox"
        />
        <span
          class="text-sm font-semibold text-theme-secondary-text"
        >
          Multisignature
        </span>
      </label>
    </fieldset>
    <div
      class="flex justify-end mt-4"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 ePkfgQ"
        data-testid="PeerForm__submit-button"
        type="submit"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Edit Peer
        </div>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
